# vscode-devcontainer-test

./: .gitignore  README.md  generated_message_bases.h  pyproject.toml  sample.py
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: code-rabbit.yml
codontest/: gpu-sample.ptx
cpp/: .protolint.yml  Makefile  main.cpp  protocol.proto  readme.md  sample.cpp  sample.pb.cc  sample.pb.h  user.cpp  user.pb.cc  user.pb.h  user.proto
cpp/parseGameRecordAndAnalyze_py/: mahjongsoul_pb2.py  parseGameRecordAndAnalyze.py  playground.py  protocol_pb2.py  readme.md  test5.py
cpp/parseGameRecordAndAnalyze_py/paifu/: mahjongsoul_paifu_230921-0a39a19b-4820-4b40-9fda-dd5481d023e4.txt  mahjongsoul_paifu_230921-2e8495ad-c9df-4b0f-9f10-dd354b9daeeb.txt  mahjongsoul_paifu_231214-df604b7c-fc99-425c-8a3c-5ad0bed89a65.json  sanma_cpu_emoji_mahjongsoul_paifu_231215-4940479a-5f4b-43bb-a2a2-de1402258f39.json  sanma_cpu_futuu_custom_benrinasi_emoji_mahjongsoul_paifu_231215-6ed2aae2-22d0-42b6-805d-93ede30097f2.json  sanma_cpusen_mahjongsoul_paifu_231215-613eb8b1-84e8-4726-98ac-a578055e6b9a.txt  sanma_ikkyokusen_mahjongsoul_paifu_231215-a5d87184-f612-4c5e-a31c-72dbae44aaf8.txt
rails-with-rbs/: Gemfile  readme.md
rails-with-rbs/app/views/layouts/: application.html.erb
rails-with-rbs/config/: application.rb  cable.yml  credentials.yml.enc
rails-with-rbs/config/environments/: production.rb
rails-with-rbs/rbssample/: Steepfile  sample.rb  sample.rbs  typeprofTest.rb
rails-with-rbs/rbssample/sig/: sample.rbs
