[tool.poetry]
name = "vscode-devcontainer-test"
version = "0.1.0"
description = ""
authors = ["0num4 <r.oonuma@matsuri-tech.com>"]
readme = "README.md"
packages = [{include = "vscode_devcontainer_test"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
